--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <nav>
             <ul>
                 <li>
-                    <a href="index.html"><button id="navoffset">About</button></a>
+                    <a href="index.html"><button id="navoffset">Home</button></a>
                 </li>
                 <li>
                     <a href="projects.html"><button>Projects</button></a>
@@ -35,10 +35,15 @@
         <div id="pageinfo">
             <section id="welcome">
                 <p>
-                    Welcome to my cool website!
-                    <br><br>
+                    Welcome to my website!
                     This is an ongoing blog of my projects, classes,
                     jobs, and anything else related!
+
+                    <br><br>
+                    A little background info about myself,
+                    I am a Junior studying Computer Science
+                    and Data Science at UW Madison. I intend
+                    to graduate May 2023!
                     <br><br>
                     If you would like to connect with me, my
                     <a href="#gotobottom" id="link">contact</a> info is below.
