--- a/projects.html
+++ b/projects.html
@@ -34,28 +34,29 @@
         </nav>
         <div id="pageinfo">
             <section>
-                <p><a id="link" href="google.com" target="_blank">Crypto Scraper</a>
-                    - 5/21 to Present - JAVASCRIPT, SQL, PYTHON
+                <p><a id="link" href="/crypto/cryptoscraper.html" target="_blank">Scraper</a>
+                    - JavaScript, SQL, Python
                 </p>
                 <p>
-                    Host to view the cryptos I am invested in! Host to view the cryptos I am invested in!
-                    Host to view the cryptos I am invested in! Host to view the cryptos I am invested in!
-                    Host to view the cryptos I am invested in!
+                    Crypto is such a growing market!
+                    To track my investments, I use this <a id="slink" href="/minecraft/mcserver.html" target="_blank">webpage</a>
+                    More info on the process can be found on that page.
                 </p>
             </section>
             <section>
-                <p><a id="link" href="/minecraft/mcserver.html" target="_blank">Minecraft Server</a>
-                    - 5/20 to Present - JAVA, SQL
+                <p><a id="link" href="/crypto/cryptoscraper.html" target="_blank">Minecraft Server</a>
+                     - JAVA, SQL
                 </p>
                 <p>
-                    Coding and testing original plugins for Minecraft. 
-                    Using Google Cloud compute engine to host multiple servers tied together by a proxy server.
-                    The server IP address is: 34.123.191.172 which you can connect to via a Minecraft account and launcher
+                    Experience with in depth Java plugin development for a Minecraft server I host.
+                    Find out <a id="slink" href="/minecraft/mcserver.html" target="_blank">more info</a> about the project.
+                    Explore the code behind the project on <a id="slink" href="https://github.com/cadeheinberg/SKplugin/tree/main/SevenKitsPlugin/src/me/cade/PluginSK" target="_blank">github</a>.
+                    The server is currently offline.
                 </p>
             </section>
             <section>
-                <p><a id="link" href="cadeheinberg.com">This Website</a>
-                    - 10/20 to Present - HTML, CSS
+                <p><a id="link" href="index.html">This Website</a>
+                    - HTML, CSS
                 </P>
                 <p>
                     I plan to add JavaScript to make switching between pages more seemless.
