--- a/school.html
+++ b/school.html
@@ -37,47 +37,29 @@
                 <p><a id="link" href="https://www.wisc.edu/" target="_blank">UW Madison</a>
                     - Class 2023
                 <br>
-                    Pursuing BS in Computer Science
+                    Current GPA is 3.69?
                 <br>
                 <ul>
                     <li>
-                        <a id="slink" href="" target="_blank">CS 400</a>
-                        - Spring 2020
+                        <a id="slink" href="" target="_blank">CS Bachelors</a>
+                        - May 2023
                         <br>
-                        A description of the class describing the class
-                        will go right here
+                        Bachelors of Science, Computer Science degree.
+                        With a focus in Java, machine learning, hardware, and web.
                     </li>
                     <br>
                     <li>
-                        <a id="slink" href="" target="_blank">CS 240</a>
-                        - Spring 2020
+                        <a id="slink" href="" target="_blank">DS Bachelors</a>
+                        - May 2023
                         <br>
-                        A description of the class describing the class
-                        will go right here
+                        Bachelors of Science, Data Science degree.
+                        With a focus in python, SQL, statistics, and web.
                     </li>
                     <br>
                     <li>
-                        <a id="slink" href="" target="_blank">ECE 252</a>
-                        - Spring 2020
+                        <a id="slink" href="" target="_blank">Extracurriculars</a>
                         <br>
-                        A description of the class describing the class
-                        will go right here
-                    </li>
-                    <br>
-                    <li>
-                        <a id="slink" href="" target="_blank">CS 300</a>
-                        - Spring 2020
-                        <br>
-                        A description of the class describing the class
-                        will go right here
-                    </li>
-                    <br>
-                    <li>
-                        <a id="slink" href="" target="_blank">MATH 222</a>
-                        - Spring 2020
-                        <br>
-                        A description of the class describing the class
-                        will go right here
+                        Peer tutoring, volleyball, yoga, and learning center.
                     </li>
                 </ul>
                 </p>
@@ -89,7 +71,6 @@
                     <ul>
                         <li>
                             <a id="slink" href="" target="_blank">National Honor Society</a>
-                            - Senior Year
                             <br>
                             A description of the class describing the class
                             will go right here
@@ -97,7 +78,6 @@
                         <br>
                         <li>
                             <a id="slink" href="" target="_blank">Peer Tutoring</a>
-                            - Sophomore to Senior
                             <br>
                             A description of the class describing the class
                             will go right here
