--- a/index.html
+++ b/index.html
@@ -34,11 +34,10 @@
         </nav>
         <div id="pageinfo">
             <section id="welcome">
-                <p>
+                <p><p id="posttitle">Introduction</p>
                     Welcome to my website!
                     This is an ongoing blog of my projects, classes,
                     jobs, and anything else related!
-
                     <br><br>
                     A little background info about myself,
                     I am a Junior studying Computer Science
@@ -46,7 +45,7 @@
                     to graduate May 2023!
                     <br><br>
                     If you would like to connect with me, my
-                    <a href="#gotobottom" id="link">contact</a> info is below.
+                    <a href="#gotobottom" id="slink">contact</a> info is below.
                 </p>
             </section>
         </div>
