--- a/projects.html
+++ b/projects.html
@@ -7,7 +7,7 @@
         <link href="/profileCSS/profile.css" type="text/css" rel="stylesheet"/>
     </head>
 
-    <body>
+    <body style="height: 1400px;">
         <header>
             <div id="selfiebox">
                 <img src="selfie.png" id="selfie"/>
@@ -34,33 +34,40 @@
         </nav>
         <div id="pageinfo">
             <section>
-                <p><a id="link" href="/crypto/cryptoscraper.html" target="_blank">Scraper</a>
-                    - JavaScript, SQL, Python
+                <p><p id="posttitle">Crypto Scraper</p>
                 </p>
                 <p>
                     Crypto is such a growing market!
-                    To track my investments, I use this <a id="slink" href="/minecraft/mcserver.html" target="_blank">webpage</a>
-                    More info on the process can be found on that page.
+                    To track my investments, I built this <a id="slink" href="/crypto/cryptoscraper.html">webpage.</a>
+                    More info on the project can be found on there!
+                    <br><br>
+                    May 2020 to Present
+                    <br>JavaScript, SQL, Python
                 </p>
             </section>
             <section>
-                <p><a id="link" href="/crypto/cryptoscraper.html" target="_blank">Minecraft Server</a>
-                     - JAVA, SQL
+                <p><p id="posttitle">Minecraft Server</p>
                 </p>
                 <p>
-                    Experience with in depth Java plugin development for a Minecraft server I host.
-                    Find out <a id="slink" href="/minecraft/mcserver.html" target="_blank">more info</a> about the project.
-                    Explore the code behind the project on <a id="slink" href="https://github.com/cadeheinberg/SKplugin/tree/main/SevenKitsPlugin/src/me/cade/PluginSK" target="_blank">github</a>.
+                    Java plugin development for a Minecraft server I host.
+                    Check out the project <a id="slink" href="/minecraft/mcserver.html" target="_blank">overview</a>,
+                    or explore the code behind it on <a id="slink" href="https://github.com/cadeheinberg/SKplugin/tree/main/SevenKitsPlugin/src/me/cade/PluginSK" target="_blank">github</a>.
                     The server is currently offline.
+                    <br><br>
+                    May 2020 to Present
+                    <br>Java, SQL
                 </p>
             </section>
             <section>
-                <p><a id="link" href="index.html">This Website</a>
-                    - HTML, CSS
+                <p><p id="posttitle">This Website</p>
+                    
                 </P>
                 <p>
-                    I plan to add JavaScript to make switching between pages more seemless.
-                    Code for this website can be found here <a id="slink" href="https://github.com/cadeheinberg/html" target="_blank">github</a>
+                    The code for this website you are on now
+                    can be found on <a id="slink" href="https://github.com/cadeheinberg/html" target="_blank">github</a>.
+                    <br><br>
+                    May 2020 to Present
+                    <br>HTML, CSS                
                 </p>
             </section>
         </div>
