--- a/resume.html
+++ b/resume.html
@@ -38,33 +38,33 @@
 
         <div id="pageinfo">
             <section>
-                <p><a id="link" href="https://www.wildwesttown.com/" target="_blank">Donley's Wild West Town</a>
-                    - 6/17 to 9/19 - Attractions Operator
-                </p>
+                <p id="posttitle">Wild West Town</p>
                 <p>
-                    Other things about the job will go here.
-                    And other things will also go here.
-                    Clicking on the will pull up contact info
+                    From 6/17 to 9/19. 
+                    <br><br>
+                    Worked as a cowboy at the Wild West themed amusement park.
+                    Contact info found
+                    <a id="slink" href="https://www.wildwesttown.com/" target="_blank">here</a>.
                 </p>
             </section>
             <section>
-                <p><a id="link" href="https://locations.tacobell.com/il/huntley/13320-s-highway-47.html" target="_blank">Taco Bell</a>
-                    - 9/17 to 11/18 - Attractions Operator
-                </p>
+                <p id="posttitle">Taco Bell</p>
                 <p>
-                    Other things about the job will go here.
-                    And other things will also go here.
-                    Clicking on the will pull up contact info
+                    From 9/17 to 11/18.
+                    <br><br>
+                    Worked at Taco Bell as a cashier. 
+                    Contact info found
+                    <a id="slink" href="https://locations.tacobell.com/il/huntley/13320-s-highway-47.html" target="_blank">here</a>.
                 </p>
             </section>
             <section>
-                <p><a id="link" href="https://www.cafe20marengo.com/">Cafe 20</a>
-                    - 8/16 to 2/17 - Attractions Operator
-                </p>
+                <p id="posttitle">Cafe 20</p>
                 <p>
-                    Other things about the job will go here.
-                    And other things will also go here.
-                    Clicking on the will pull up contact info
+                    From 8/16 to 2/17.
+                    <br><br>
+                    Worked as a Dish Washer. 
+                    Contact info found
+                    <a id="slink" href="https://www.cafe20marengo.com/" target="_blank">here</a>.
                 </p>
             </section>
         </div>
