--- a/projects.html
+++ b/projects.html
@@ -4,7 +4,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Profile</title>
         <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Ubuntu:regular,bold&subset=Latin"/>
-        <link href="/profileCSS/profile.css" type="text/css" rel="stylesheet"/>
+        <link href="profileCSS/profile.css" type="text/css" rel="stylesheet"/>
     </head>
 
     <body style="height: 1400px;">
@@ -33,6 +33,19 @@
             </ul>
         </nav>
         <div id="pageinfo">
+            <section>
+                <p><p id="posttitle">Note Taker</p>
+                </p>
+                <p>
+                    I always find myself wanting to share
+                    notes from my phone to my PC. So 
+                    I built this <a id="slink" href="mynotes.php">webpage</a>
+                    to do just that!
+                    <br><br>
+                    May 2020 to Present
+                    <br>PHP, HTML, CSS
+                </p>
+            </section>
             <section>
                 <p><p id="posttitle">Crypto Scraper</p>
                 </p>
