--- a/projects.html
+++ b/projects.html
@@ -10,7 +10,7 @@
     <body style="height: 1400px;">
         <header>
             <div id="selfiebox">
-                <img src="selfie.png" id="selfie"/>
+                <a href="index.html"><img src="selfie.png" id="selfie"/></a>
             </div>
             <div id="mynamebox">
                 <h1>Cade Heinberg</h1>
