note box creator

--- a/projects.html
+++ b/projects.html
@@ -63,7 +63,7 @@
                 </p>
                 <p>
                     Java plugin development for a Minecraft server I host.
-                    Check out the project <a id="slink" href="/minecraft/mcserver.html" target="_blank">overview</a>,
+                    Check out the project <a id="slink" href="/minecraft/mcserver.html">overview</a>,
                     or explore the code behind it on <a id="slink" href="https://github.com/cadeheinberg/SKplugin/tree/main/SevenKitsPlugin/src/me/cade/PluginSK" target="_blank">github</a>.
                     The server is currently offline.
                     <br><br>
