--- a/projects.html
+++ b/projects.html
@@ -4,10 +4,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Profile</title>
         <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Ubuntu:regular,bold&subset=Latin"/>
-        <link href="profileCSS/profile.css" type="text/css" rel="stylesheet"/>
+        <link href="profile.css" type="text/css" rel="stylesheet"/>
     </head>
 
-    <body style="height: 1400px;">
+    <body style="height: 1800px;">
         <header>
             <div id="selfiebox">
                 <a href="index.html"><img src="selfie.png" id="selfie"/></a>
@@ -39,7 +39,7 @@
                 <p>
                     I always find myself wanting to share
                     notes from my phone to my PC. So 
-                    I built this <a id="slink" href="mynotes.php">webpage</a>
+                    I built this <a id="slink" href="NoteTaker/mynotes.php">webpage</a>
                     to do just that!
                     <br><br>
                     May 2020 to Present
@@ -51,7 +51,7 @@
                 </p>
                 <p>
                     Crypto is such a growing market!
-                    To track my investments, I built this <a id="slink" href="/crypto/cryptoscraper.html">webpage.</a>
+                    To track my investments, I built this <a id="slink" href="CryptoScraper/cryptoscraper.html">webpage.</a>
                     More info on the project can be found on there!
                     <br><br>
                     May 2020 to Present
