--- a/school.html
+++ b/school.html
@@ -4,7 +4,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Profile</title>
         <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Ubuntu:regular,bold&subset=Latin"/>
-        <link href="profileCSS/profile.css" type="text/css" rel="stylesheet"/>
+        <link href="profile.css" type="text/css" rel="stylesheet"/>
     </head>
 
     <body style="height: 1400px;">
