--- a/projects.html
+++ b/projects.html
@@ -62,8 +62,8 @@
                 <p><p id="posttitle">Minecraft Server</p>
                 </p>
                 <p>
-                    Java plugin development for a Minecraft server I host.
-                    Check out the project <a id="slink" href="/minecraft/mcserver.html">overview</a>,
+                    Java plugin development for a Minecraft server I host!
+                    Check out the project <a id="slink" href="MinecraftServer/serverstats.php">overview</a>,
                     or explore the code behind it on <a id="slink" href="https://github.com/cadeheinberg/SKplugin/tree/main/SevenKitsPlugin/src/me/cade/PluginSK" target="_blank">github</a>.
                     The server is currently offline.
                     <br><br>
