--- a/projects.html
+++ b/projects.html
@@ -51,11 +51,11 @@
                 </p>
                 <p>
                     Crypto is such a growing market!
-                    To track my investments, I built this <a id="slink" href="CryptoScraper/cryptoscraper.html">webpage.</a>
+                    To track my investments, I built this <a id="slink" href="CryptoScraper/crypto.html">webpage.</a>
                     More info on the project can be found on there!
                     <br><br>
                     May 2020 to Present
-                    <br>JavaScript, SQL, Python
+                    <br>Javascript, React, Node, SQL
                 </p>
             </section>
             <section>
