--- a/projects.html
+++ b/projects.html
@@ -47,25 +47,12 @@
                 </p>
             </section>
             <section>
-                <p><p id="posttitle">Crypto Scraper</p>
-                </p>
-                <p>
-                    Crypto is such a growing market!
-                    To track my investments, I built this <a id="slink" href="CryptoScraper/crypto.html">webpage.</a>
-                    More info on the project can be found on there!
-                    <br><br>
-                    May 2020 to Present
-                    <br>Javascript, React, Node, SQL
-                </p>
-            </section>
-            <section>
                 <p><p id="posttitle">Minecraft Server</p>
                 </p>
                 <p>
                     Java plugin development for a Minecraft server I host!
-                    Check out the project <a id="slink" href="MinecraftServer/serverstats.php">overview</a>,
-                    or explore the code behind it on <a id="slink" href="https://github.com/cadeheinberg/SKplugin/tree/main/SevenKitsPlugin/src/me/cade/PluginSK" target="_blank">github</a>.
-                    The server is currently offline.
+                    Explore the code behind it on <a id="slink" href="https://github.com/cadeheinberg/SKplugin/tree/main/SevenKitsPlugin/src/me/cade/PluginSK" target="_blank">github</a>.
+                    The server is joinable at cadeheinberg.com via a Minecraft Launcher 1.16.5!
                     <br><br>
                     May 2020 to Present
                     <br>Java, SQL
@@ -78,6 +65,7 @@
                 <p>
                     The code for this website you are on now
                     can be found on <a id="slink" href="https://github.com/cadeheinberg/html" target="_blank">github</a>.
+                    I am currently working on a <a id="slink" href="https://github.com/cadeheinberg/Portfolio-React" target="_blank">REACT version</a> of the site!
                     <br><br>
                     May 2020 to Present
                     <br>HTML, CSS                
