--- a/skills.html
+++ b/skills.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <div class="name-banner"><h1><em><strong>Cade Heinberg</strong></em></h1></div>
+    <div class="name-banner"><h1><em><strong>Skills</strong></em></h1></div>
     <div class="topbar">
         <div class="topbar-container">
 
