big update images

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     </li>
 
                     <li class="nav-item">
-                        <a href="#" class="nav-link">
+                        <a href="projects.html" class="nav-link">
                             <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="code"
                                 class="svg-inline--fa fa-code fa-w-20" role="img" xmlns="http://www.w3.org/2000/svg"
                                 viewBox="0 0 640 512">
@@ -77,7 +77,7 @@
                     </li>
 
                     <li class="nav-item">
-                        <a href="#" class="nav-link">
+                        <a href="work.html" class="nav-link">
                             <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="briefcase"
                                 class="svg-inline--fa fa-briefcase fa-w-16" role="img"
                                 xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
@@ -97,7 +97,7 @@
                     </li>
 
                     <li class="nav-item">
-                        <a href="#" class="nav-link">
+                        <a href="school.html" class="nav-link">
                             <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="university"
                                 class="svg-inline--fa fa-university fa-w-16" role="img"
                                 xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
