--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                 <b>Email:</b> cadeheinberg@outlook.com
                 <br><b>Phone:</b> 815-572-1282
                 <br><b>LinkedIn:</b> N/A
-                <br><b>Handshake:</b> Test
+                <br><b>Handshake:</b> N/A
                 
                 </p>
             </div>
