--- a/projects.html
+++ b/projects.html
@@ -154,7 +154,7 @@
                     <li><strong>Start/End:</strong> 06.2022 -> ongoing</li>
                 </ul><br>
                 A website made for the band BROCKHAMPTON.
-                <a href=".../brockhampton-website/about.html" target="_blank">Click this link</a> to view it
+                <a href="../brockhampton-website/about.html" target="_blank">Click this link</a> to view it
                 in a new tab. There is a fully functioning store, about, and home page for you
                 to learn more about the band and my thoughts on them.
                 </p>
