--- a/projects.html
+++ b/projects.html
@@ -5,7 +5,9 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Cade Heinberg</title>
-    <meta name="description" content="">
+    <meta name="description" content="Cade Heinberg's
+    portfolio. Showcasing Cade's resume, projects, work, 
+    college courses and more!">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="style.css">
     <link rel="apple-touch-icon" sizes="180x180" href="images/favicon/apple-touch-icon.png">
